--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
         </mat-form-field>
 
         <mat-form-field appearance="fill" fxFlex="25">
-          <mat-label>Pitch</mat-label>
+          <mat-label>Speed</mat-label>
           <textarea matInput formControlName="speed" rows="1"></textarea>
         </mat-form-field>
       </div>
